--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
         "test": "jest --verbose",
         "release": "blueprint pack && npm publish --access public"
     },
-    "dependencies": {
-        "@ton/core": "~0"
-    },
     "devDependencies": {
         "@tact-lang/compiler": ">=1.6.10 <2.0.0",
         "@ton-community/func-js": "file:../ton-community-func-js-0.9.1.tgz",
-        "@ton/blueprint": "file:../ton-blueprint-0.34.0.tgz",
+        "@ton/blueprint": "file:../ton-blueprint-0.36.1.tgz",
         "@ton/crypto": "^3.3.0",
-        "@ton/sandbox": ">=0.31.0",
+        "@ton/sandbox": "file:../ton-sandbox-0.33.0.tgz",
         "@ton/test-utils": ">=0.6.0",
         "@ton/tolk-js": ">=0.12.0",
         "@ton/ton": ">=15.2.1 <16.0.0",
@@ -27,5 +24,8 @@
         "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "@ton/core": "^0.61.0"
     }
 }
